--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -1,5 +1,8 @@
-# open terminal
-# cmd - return : /Applications/Kitty.app/Contents/MacOS/kitty --single-instance -d ~
+# Space Navigation (four spaces per display): alt - {1, 2, 3, 4}
+alt - 1 : yabai -m space --focus 1
+alt - 2 : yabai -m space --focus 2
+alt - 3 : yabai -m space --focus 3
+alt - 4 : yabai -m space --focus 4
 
 # focus window
 alt - h : yabai -m window --focus west
@@ -12,6 +15,20 @@ shift + alt - h : yabai -m window --swap west
 shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
+
+# Moving windows between spaces: shift + alt - {1, 2, 3, 4, p, n }
+shift + alt - 1 : yabai -m window --space 1; \
+                  yabai -m space --focus 1       
+shift + alt - 2 : yabai -m window --space 2; \
+                  yabai -m space --focus 2       
+shift + alt - 3 : yabai -m window --space 3; \
+                  yabai -m space --focus 3       
+shift + alt - 4 : yabai -m window --space 4; \
+                  yabai -m space --focus 4       
+shift + alt - p : yabai -m window --space prev; \
+                  yabai -m space --focus prev       
+shift + alt - n : yabai -m window --space next; \
+                   yabai -m space --focus next       
 
 # rotate tree
 alt - r : yabai -m space --rotate 90
