--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-font_size 14
-font_family Input Mono
+font_size 15
+font_family CaskaydiaCove Nerd Font
 scrollback_lines 8000
 background_opacity 1
 include current-theme.conf
