--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,20 +28,20 @@ set -g @gold "#f6c177"
 set -g @iris "#c4a7e7"
 set -g @overlay "#26233a"
 
-set -g @window-info "#[bg=#{@rose} fg=#{@base} bold] #I::#P"
-set -g @user "#[bg=default fg=#{@rose} none] #(whoami) "
+# set -g @window-info "#[bg=#{@rose} fg=#{@base} bold] #I::#P"
+# set -g @user "#[bg=default fg=#{@rose} none] #(whoami) "
 set -g @window-format "#I:#W#F"
 
 set -g @time "#[bg=#{@rose} fg=#{@base} bold] %H:%M:%S "
 set -g @date "#[bg=default fg=#{@rose} none] %a %d %b "
 
 set -gF status-interval 1
-set -gF status-justify absolute-centre
+set -gF status-justify left
 
 set -gF message-command-style "bg=default fg=#{@text}"
 set -gF message-style "bg=default fg=#{@text}"
 
-set -gF status-left "#{@window-info} #{@user}"
+set -gF status-left ""
 set -gF status-left-length 150
 
 set -gF status-right "#{@date}#{@time}"
