--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,9 +2,9 @@ font_size 15
 font_family CaskaydiaCove Nerd Font
 scrollback_lines 8000
 background_opacity 1
-include current-theme.conf
+include Catppuccin-Mocha.conf
 tab_bar_style              powerline
 tab_powerline_style        slanted
-hide_window_decorations titlebar-only
 editor  /opt/homebrew/bin/nvim
-tab_title_template "{index}: {title[title.rfind('/')+1:]}"  
+tab_title_template "{index}: {tab.active_oldest_wd[tab.active_oldest_wd.rfind('/')+1:]}"  
+allow_remote_control yes
