--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -1,40 +1,44 @@
-## Space Navigation (four spaces per display): lalt - {1, 2, 3, 4}
-alt - 1 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((1+4*($DISPLAY - 1)))
-alt - 2 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((2+4*($DISPLAY - 1)))
-alt - 3 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((3+4*($DISPLAY - 1)))
-alt - 4 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((4+4*($DISPLAY - 1)))
-alt - 5 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((5+4*($DISPLAY - 1)))
-alt - 6 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((6+4*($DISPLAY - 1)))
-alt - 7 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((7+4*($DISPLAY - 1)))
-alt - 8 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((8+4*($DISPLAY - 1)))
-alt - 9 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m space --focus $((9+4*($DISPLAY - 1)))
+# config changes
+alt - f :  yabai -m window --toggle zoom-fullscreen
+alt - v : yabai -m window --toggle split
+alt + shift - w : yabai -m window --close
+alt + shift - r : yabai --restart-service
 
-## Moving windows between spaces: shift + lalt - {1, 2, 3, 4}
-shift + alt - 1 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((1+4*($DISPLAY - 1)))
-shift + alt - 2 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((2+4*($DISPLAY - 1)))
-shift + alt - 3 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((3+4*($DISPLAY - 1)))
-shift + alt - 4 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((4+4*($DISPLAY - 1)))
-shift + alt - 5 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((5+4*($DISPLAY - 1)))
-shift + alt - 6 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((6+4*($DISPLAY - 1)))
-shift + alt - 7 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((7+4*($DISPLAY - 1)))
-shift + alt - 8 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((8+4*($DISPLAY - 1)))
-shift + alt - 9 : DISPLAY="$(yabai -m query --displays --display | jq '.index')"; yabai -m window --space $((9+4*($DISPLAY - 1)))
+# change between tiling and stacking
+alt - e : yabai -m space --layout bsp
+alt - w : yabai -m space --layout stack
+alt - q : yabai -m space --layout float
 
-## Window Navigation (through display borders): lalt - {h, j, k, l}
-alt - h : yabai -m window --focus west  || yabai -m display --focus west
-alt - j : yabai -m window --focus south || yabai -m display --focus south
-alt - k : yabai -m window --focus north || yabai -m display --focus north
-alt - l : yabai -m window --focus east  || yabai -m display --focus east
+# switch between windows
+alt - h : yabai -m window --focus west
+alt - j : yabai -m window --focus stack.next || yabai -m window --focus south
+alt - k : yabai -m window --focus stack.prev || yabai -m window --focus north
+alt - l : yabai -m window --focus east
 
-## Moving windows in spaces: shift + lalt - {h, j, k, l}
-shift + alt - h : yabai -m window --warp west || $(yabai -m window --display west && sketchybar --trigger windows_on_spaces && yabai -m display --focus west && yabai -m window --warp last) || yabai -m window --move rel:-10:0
-shift + alt - j : yabai -m window --warp south || $(yabai -m window --display south && sketchybar --trigger windows_on_spaces && yabai -m display --focus south) || yabai -m window --move rel:0:10
-shift + alt - k : yabai -m window --warp north || $(yabai -m window --display north && sketchybar --trigger windows_on_spaces && yabai -m display --focus north) || yabai -m window --move rel:0:-10
-shift + alt - l : yabai -m window --warp east || $(yabai -m window --display east && sketchybar --trigger windows_on_spaces && yabai -m display --focus east && yabai -m window --warp first) || yabai -m window --move rel:10:0
+# move windows around desktop
+alt + shift - h : yabai -m window --warp west
+alt + shift - j : yabai -m window --warp south
+alt + shift - k : yabai -m window --warp north
+alt + shift - l : yabai -m window --warp east
 
-alt - f : yabai -m window --toggle zoom-fullscreen
-alt - s : yabai -m window --toggle split
-alt - a : yabai -m space --layout bsp
-alt - d : yabai -m space --layout float
+# switch between desktops
+alt - 1 : yabai -m space --focus 1
+alt - 2 : yabai -m space --focus 2
+alt - 3 : yabai -m space --focus 3
+alt - 4 : yabai -m space --focus 4
+alt - 5 : yabai -m space --focus 5
+alt - 6 : yabai -m space --focus 6
+alt - 7 : yabai -m space --focus 7
+alt - 8 : yabai -m space --focus 8
+alt - 9 : yabai -m space --focus 9
 
-ctrl + alt - r : yabai --restart-service
+# move windows to desktops
+alt + shift - 1 : yabai -m window --space 1
+alt + shift - 2 : yabai -m window --space 2
+alt + shift - 3 : yabai -m window --space 3
+alt + shift - 4 : yabai -m window --space 4
+alt + shift - 5 : yabai -m window --space 5
+alt + shift - 6 : yabai -m window --space 6
+alt + shift - 7 : yabai -m window --space 7
+alt + shift - 8 : yabai -m window --space 8
+alt + shift - 9 : yabai -m window --space 9
