--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,15 @@
-font_size 15
-font_family CaskaydiaCove Nerd Font
+font_size 17
 scrollback_lines 8000
 background_opacity 1
+font_family CaskaydiaCove Nerd Font
+tab_title_template "{index}: {tab.active_oldest_wd[tab.active_oldest_wd.rfind('/')+1:]}"  
+hide_window_decorations titlebar-only
 include Catppuccin-Mocha.conf
+allow_remote_control yes
 tab_bar_style              powerline
 tab_powerline_style        slanted
 editor  /opt/homebrew/bin/nvim
-tab_title_template "{index}: {tab.active_oldest_wd[tab.active_oldest_wd.rfind('/')+1:]}"  
-allow_remote_control yes
+disable_ligatures always
+map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting less +G -R
+map f2 new_tab_with_cwd
+# font_family FiraCode Nerd Font
