--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,53 +19,69 @@ set-option -g history-limit 5000
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+
 set -g @base "#12121e"
 set -g @text "#e0def4"
-set -g @love "#ff789E"
 set -g @rose "#ebbcba"
-set -g @foam "#9ccfd8"
-set -g @gold "#f6c177"
-set -g @iris "#c4a7e7"
-set -g @overlay "#26233a"
-
-# set -g @window-info "#[bg=#{@rose} fg=#{@base} bold] #I::#P"
-# set -g @user "#[bg=default fg=#{@rose} none] #(whoami) "
+set -g @window-info "#[bg=#{@rose} fg=#{@base} bold] #I::#P"
+set -g @user "#[bg=default fg=#{@rose} none] #(whoami) "
 set -g @window-format "#I:#W#F"
-
 set -g @time "#[bg=#{@rose} fg=#{@base} bold] %H:%M:%S "
 set -g @date "#[bg=default fg=#{@rose} none] %a %d %b "
-
-set -gF status-interval 1
-set -gF status-justify left
-
-set -gF message-command-style "bg=default fg=#{@text}"
-set -gF message-style "bg=default fg=#{@text}"
-
+set -gF status-style "bg=default fg=#{@text}"
 set -gF status-left ""
 set -gF status-left-length 150
-
 set -gF status-right "#{@date}#{@time}"
 set -gF status-right-length 150
 
-set -gF status-style "bg=default fg=#{@text}"
 
-set -gF pane-active-border-style "bg=default fg=#{@gold}"
-set -gF pane-border-style "bg=default fg=#{@base}"
-
-set -gF window-status-format " #{@window-format} "
-set -gF window-status-current-format " #{@window-format} "
-set -gF window-status-activity-style "bg=#{@love} fg=#{@base} bold" # when something is wrong in window
-set -gF window-status-current-style "bg=#{@foam} fg=#{@base} bold" # active window indicator
-set -gF window-status-separator ""
-
-set -gF clock-mode-style 24
-set -gF clock-mode-colour "#{@iris}" # press <prefix> + t
-
-set -gF mode-style "bg=#{@overlay} fg=#{@rose}" # scoll mode indicator and selection
-
-# comment this para out on older tmux versions
-set -gF copy-mode-match-style "bg=#{@foam} fg=#{@base}"
-set -gF copy-mode-current-match-style "bg=#{@love} fg=#{@base}"
-
-set -gF display-panes-colour "#{@foam}"
-set -gF display-panes-active-colour "#{@love}"
+# set -g @base "#12121e"
+# set -g @text "#e0def4"
+# set -g @love "#ff789E"
+# set -g @rose "#ebbcba"
+# set -g @foam "#9ccfd8"
+# set -g @gold "#f6c177"
+# set -g @iris "#c4a7e7"
+# set -g @overlay "#26233a"
+#
+# # set -g @window-info "#[bg=#{@rose} fg=#{@base} bold] #I::#P"
+# # set -g @user "#[bg=default fg=#{@rose} none] #(whoami) "
+# set -g @window-format "#I:#W#F"
+#
+# set -g @time "#[bg=#{@rose} fg=#{@base} bold] %H:%M:%S "
+# set -g @date "#[bg=default fg=#{@rose} none] %a %d %b "
+#
+# set -gF status-interval 1
+# set -gF status-justify center
+#
+# set -gF message-command-style "bg=default fg=#{@text}"
+# set -gF message-style "bg=default fg=#{@text}"
+#
+# set -gF status-left ""
+# set -gF status-left-length 150
+#
+# set -gF status-right "#{@date}#{@time}"
+# set -gF status-right-length 150
+#
+# set -gF status-style "bg=default fg=#{@text}"
+#
+# set -gF pane-active-border-style "bg=default fg=#{@gold}"
+# set -gF pane-border-style "bg=default fg=#{@base}"
+#
+# set -gF window-status-format " #{@window-format} "
+# set -gF window-status-current-format " #{@window-format} "
+# set -gF window-status-activity-style "bg=#{@love} fg=#{@base} bold" # when something is wrong in window
+# set -gF window-status-current-style "bg=#{@foam} fg=#{@base} bold" # active window indicator
+# set -gF window-status-separator ""
+#
+# set -gF clock-mode-style 24
+# set -gF clock-mode-colour "#{@iris}" # press <prefix> + t
+#
+# set -gF mode-style "bg=#{@overlay} fg=#{@rose}" # scoll mode indicator and selection
+#
+# # comment this para out on older tmux versions
+# set -gF copy-mode-match-style "bg=#{@foam} fg=#{@base}"
+# set -gF copy-mode-current-match-style "bg=#{@love} fg=#{@base}"
+#
+# set -gF display-panes-colour "#{@foam}"
+# set -gF display-panes-active-colour "#{@love}"
